--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -340,7 +340,7 @@
                     
                 <p>Pentru tratamentul amigdalitei recurente se administrează diferite grupe de medicamente, îndreptate atât pentru înlăturarea infecției (antibiotice, antiseptice), cât și pentru restabilirea funcției de protecție a organismului (imunomodulatoare, vitamine, preparate naturale complexe). </p>
 
-                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se folosețte preparatul natural complex german Tonsilotren (DHU, Germania)
+                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se foloseșțte preparatul natural complex german Tonsilotren (DHU, Germania).
 
                     TONSILOTREN este o combinație de cinci componente naturale active, care înlătură inflamația și stimulează mecanismele proprii de apărare ale organismului împotriva infecțiilor virale și bacteriene ale faringelui în diferite stadii ale inflamației și contribuie la micșorarea amigdalelor hipertrofiate. </p>
 
@@ -365,9 +365,9 @@
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
-                    Se poateadministra în orice loc și timp. Rețineți, că intervalul între administrarea preparatuluiTonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
+                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
 
-                    În caz de amigdalită Tonsilotren trebuie luat imediat în ce au apărut primele simptome.
+                    În caz de amigdalită Tonsilotren trebuie luat imediat ce au apărut primele simptome.
 
                     Tonsilotren ajută la regenerarea și restabilirea funcției de protecție a amigdalelor.  </p>
             </div>
@@ -385,9 +385,9 @@
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
-                    Se poateadministra în orice loc și timp. Rețineți, că intervalul între administrarea preparatuluiTonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
+                    Se oate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
 
-                    În caz de amigdalită Tonsilotren trebuie luat imediat în ce au apărut primele simptome.
+                    În caz de amigdalită Tonsilotren trebuie luat imediat ce au apărut primele simptome.
 
                     Tonsilotren ajută la regenerarea și restabilirea funcției de protecție a amigdalelor.  </p>
             </div>
@@ -426,7 +426,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>Trebuie înlăturate   <br><b>amigdalele?</b></h4>
-                <p>Tendințele contemporane în tratamentul amigdalitei cronice la copii se bazează pe o atitudine maximal grijulie față de amigdale, ca un organ imunocompetent (organ responsabil pentru imunitate), înlăturarea acestuia fiind justificată doar în cazurile de ineficiență funcțională dovedită și hipertrofie a Inelului Pirogov-Waldeyer. </p>
+                <p>Tendințele contemporane în tratamentul amigdalitei cronice la copii se bazează pe o atitudine maximal grijulie față de amigdale, ca un organ imunocompetent (organ responsabil pentru imunitate), înlăturarea acestora  fiind justificată doar în cazurile de ineficiență funcțională dovedită și hipertrofie a Inelului Pirogov-Waldeyer. </p>
             </div>
             <div class="block-5__img"></div>
         </div>
@@ -436,7 +436,7 @@
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
                     <h4>Trebuie înlăturate   <br><b>amigdalele?</b></h4>
-                    <p>Tendințele contemporane în tratamentul amigdalitei cronice la copii se bazează pe o atitudine maximal grijulie față de amigdale, ca un organ imunocompetent (organ responsabil pentru imunitate), înlăturarea acestuia fiind justificată doar în cazurile de ineficiență funcțională dovedită și hipertrofie a Inelului Pirogov-Waldeyer. </p>
+                    <p>Tendințele contemporane în tratamentul amigdalitei cronice la copii se bazează pe o atitudine maximal grijulie față de amigdale, ca un organ imunocompetent (organ responsabil pentru imunitate), înlăturarea acestora  fiind justificată doar în cazurile de ineficiență funcțională dovedită și hipertrofie a Inelului Pirogov-Waldeyer. </p>
                 </div>
             </div>
             <button class="accordion popup-btn block-5__popup">Detalii</button>
@@ -541,7 +541,7 @@
                         <br><b>amigdalite</b></h4>
                     <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de discomfort și durere în gât.
 
-                        Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea irită și afectează și mai mult membrana mucoasă.
+                        Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea  irită și afectează și mai mult membrana mucoasă.
 
                         Dacă suferiți de amigdalită, este important ca gâtul să fie suficient de hidratat. </p>
                 </div>
@@ -550,7 +550,7 @@
 
             <div class="panel">
                 <p>
-                    <p>Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea irită și afectează și mai mult membrana mucoasă.
+                    <p>Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea  irită și afectează și mai mult membrana mucoasă.
 
                 Dacă suferiți de amigdalită, este important ca gâtul să fie suficient de hidratat. </p>
                 <p>Opiniile diferă, ce este mai bine: băuturile reci sau calde?</p>
@@ -596,7 +596,7 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>AUTO-TRATAMENTUL POATE FI PERICULOS PENTRU SĂNĂTATE.</p>
+        <p>AUTO MEDICAȚIA POATE FI PERICULOASĂ PENTRU SĂNĂTATE.</p>
     </div>
 </div>
 
