--- a/Tansilotren-KZ/index-ru.html
+++ b/Tansilotren-KZ/index-ru.html
@@ -563,7 +563,8 @@
 
         <h1>Где купить</h1>
 
-        <div class="block-7__img"></div>
+        <!-- <div class="block-7__img"></div> -->
+        <iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Ac84caab2680133c6cabaa78dc810359e5c0e4cd949f7edbdc188af50f3f0f168&amp;source=constructor" width="100%" height="284" margin="auto" frameborder="0"></iframe>
         <div class="map-text">
             <h3>Доказательная база</h3>
             <ol>
