--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -88,7 +88,7 @@
             Устраняет типичные симптомы простуды
           </p>
           <p>
-            Уменьшает потребность в симптоматических средствах (жаропонижающих, каплях в нос)
+            Оказывает положительное влияние при общей слабости, невралгии, устраняет головные боли при ОРВИ, гриппе
           </p>
         </div>
       </div>
@@ -474,8 +474,7 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>НА ПРАВАХ РЕКЛАМЫ. ГОМЕОПАТИЧЕСКОЕ ЛЕКАРСТВЕННОЕ СРЕДСТВО. ТРАДИЦИОННО ПРИМЕНЯЕТСЯ В КОМПЛЕКСНОМ ЛЕЧЕНИИ ГРИППА И ОСТРЫХ РЕСПИРАТОРНЫХ ЗАБОЛЕВАНИЙ.
-              ПЕРЕД ПРИМЕНЕНИЕМ ПРОЧТИТЕ ИНСТРУКЦИЮ ИЛИ ПРОКОНСУЛЬТИРУЙТЕСЬ С ВРАЧОМ.</p>
+            <p>НА ПРАВАХ РЕКЛАМЫ. ГОМЕОПАТИЧЕСКОЕ ЛЕКАРСТВЕННОЕ СРЕДСТВО БЕЗ УТВЕРЖДЕННЫХ ТЕРАПЕВТИЧЕСКИХ (МЕДИЦИНСКИХ) ПОКАЗАНИЙ. ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ВОЗМОЖНЫ ПОБОЧНЫЕ ЭФФЕКТЫ. ВО ВРЕМЯ БЕРЕМЕННОСТИ И ЛАКТАЦИИ ПРЕПАРАТ СЛЕДУЕТ ПРИМЕНЯТЬ ПОСЛЕ КОНСУЛЬТАЦИИ С ВРАЧОМ. ПЕРЕД ПРИМЕНЕНИЕМ ПРОЧТИТЕ ИНСТРУКЦИЮ ИЛИ ПРОКОНСУЛЬТИРУЙТЕСЬ С ВРАЧОМ. </p>
           </div>
 
 
