--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -338,7 +338,7 @@
 
 
             <p class="dt1">
-                Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням обов'язково проконсультуватися з лікарем та ознайомитися з інструкцією для застосування. Зберігати у недоступному для дітей місці. Солідагорен Р.П. UA/13795/01/01від 21.08.2019
+                Реклама лікарського засобу.Перед застосуванням обов'язково проконсультуватися з лікарем та ознайомитися з інструкцією для застосування. Зберігати у недоступному для дітей місці. Гастритол : Р.П. UA/8950/01/01 от 26.11.18 Постачальник: Др. Густав Кляйн ГМБ&Ко.КГ, Целль-ам-Хармерсбах, Німеччина. Ексклюзивний дистриб'ютор: ПрАТ "Натурфарм", вул. Лісова 30 - А, Пуща-Водиця, м. Київ, 04075; телефон: (044) 401-81-03
             </p>
 
             <a class="disclamer-tra__alpen disclamer-tra__klein klein-mob" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ, (Німеччина)</p></a>
