--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -40,19 +40,22 @@
                     <input type="checkbox" /> <span></span> <span></span> <span></span>
                     <ul id="menu">
                         <li>
-                            <a class="navmenu" href="#block-1" >Переваги</a>
+
+                            <a class="navmenu menuLi" href="#block-1" >Переваги
+                            <input class="input-li" type="checkbox"/>
+                            </a>
                         </li>
                         <li>
-                            <a class="navmenu" href="#block-2">Показання</a>
+                            <a class="navmenu menuLi" href="#block-2">Показання</a>
                         </li>
                         <li>
-                            <a class="navmenu" href="#block-3">Склад</a>
+                            <a class="navmenu menuLi" href="#block-3">Склад</a>
                         </li>
                         <li>
-                            <a class="navmenu" href="#block-4">Як приймати</a>
+                            <a class="navmenu menuLi" href="#block-4">Як приймати</a>
                         </li>
                         <li>
-                            <a class="navmenu" href="#block-5">Поради</a>
+                            <a class="navmenu menuLi" href="#block-5">Поради</a>
                         </li>
 <!--                        <li>-->
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
