--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -77,7 +77,7 @@
 
     <div class="header-custom header-custom_ru">
             <div class="header-title">
-                <p>А как выглядит твой гастрит?</p>
+                <p>А как выглядит твой<br> гастрит?</p>
                 <div class="header-title_product"></div>
                 <p class="header-title_subtext"><b>Гастритол</b> - не носи<br>с собой гастрит</p>
             </div>
@@ -298,7 +298,7 @@
                     <div>
                         <p><b>Питание</b> при лечении болезней<br>
                             желудочно - кишечного тракта</p>
-                        <a>сохрани диету</a>
+                        <a href="./Dieta_Gastritol_ru.pdf" download >сохрани диету</a>
                     </div>
                     <div class="block-5_btn-img"></div>
                 </div>
