--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -302,7 +302,7 @@
                     <div>
                         <p><b>Харчування</b> при лікуванні хвороб<br>
                             шлунково - кишкового тракту </p>
-                        <a>завантажити ДІЄТУ</a>
+                        <a href="./Dieta_Gastritol_ua.pdf" download >завантажити ДІЄТУ</a>
                     </div>
                     <div class="block-5_btn-img"></div>
                 </div>
