--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-<a target="_blank" class="instruction" href="./Dieta_Gastritol_ua.pdf">
+<a target="_blank" class="instruction" href="">
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
