--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a href="Solidagoren/index.html">Solidagoren</a>
 			<a href="gastritol-new/index.html">gastritol-new</a>
 			<a href="Tansilotren-Moldova/index.html">Tansilotren-Moldova</a>
-
+			<a href="influcid-LT/index.html">influcid-LT</a>
 			
 		</section>
 	</main>
@@ -201,6 +201,9 @@
 	}
 	a:nth-child(39)::before {
 		background: url("./Tansilotren-Moldova/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(40)::before {
+		background: url("./influcid-LT/bg.png")no-repeat center / cover;
 	}
 </style>
 
