--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -41,8 +41,8 @@
                     <ul id="menu">
                         <li>
 
-                            <a class="navmenu menuLi" href="#block-1" >Переваги
-                            <input class="input-li" type="checkbox"/>
+                            <input class="input-li" type="checkbox"/><a class="navmenu menuLi" href="#block-1" >Переваги
+
                             </a>
                         </li>
                         <li>
