--- a/Tansilotren-BY/index.html
+++ b/Tansilotren-BY/index.html
@@ -186,7 +186,7 @@
 <!--            </div>-->
 <!--        </div>-->
 
-        <div class="popup popup2" role="dialog">
+        <!-- <div class="popup popup2" role="dialog">
             <div class="popup__overlay" data-action="close2"></div>
             <div class="popup__content">
                 <button class="popup__close-btn" data-action="close2">
@@ -213,9 +213,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="popup popup3" role="dialog">
+        <!-- <div class="popup popup3" role="dialog">
             <div class="popup__overlay" data-action="close3"></div>
             <div class="popup__content">
                 <button class="popup__close-btn" data-action="close3">
@@ -254,7 +254,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -281,16 +281,18 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
-            <button class="popup-btn popup2" data-action="open2">Детальнее</button>
+            <p><b>При остром тонзиллите (ангине)</b><br>по 1 таблетке 4 раза в сутки до улучшения. Увеличение длительности лечения более 1 недели в указанном режиме или увеличение суточной дозы возможно после консультации с врачом.<br>При улучшении состояния частота приема должна быть снижена.<br>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+            <!-- <button class="popup-btn popup2" data-action="open2">Детальнее</button> -->
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
-            <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
-            <button class="popup-btn popup3" data-action="open3">Детальнее</button>
+            <p><b>При остром тонзиллите (ангине)</b><br>по 1 таблетке каждый час (но не более 6 раз в сутки). Увеличение длительности лечения более 1 недели в указанном режиме или увеличение суточной дозы возможно после консультации с врачом.<br>При улучшении состояния частота приема должна быть снижена.<br>При хронической форме заболевания: по 1 таблетке 1-3 раза в день. Продолжительность лечения определяет врач.</p>
+            <!-- <button class="popup-btn popup3" data-action="open3">Детальнее</button> -->
         </div>
     </div>
+    <p class="bottom-plate-text">Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.<br>Беременность и кормление грудью.
+Во время беременности и лактации препарат следует применять после консультации с врачом.</p>
     <a name="block-3"></a>
 </div>
 
