--- a/influcid-Moldova/index.html
+++ b/influcid-Moldova/index.html
@@ -50,7 +50,7 @@
               <a class="navmenu" href="#block-3" >Состав</a>
               <a class="navmenu" href="#block-4" >Как принимать</a>
               <a class="where-to-buy" href="#block-5" >Где купить</a>
-            <a href="index-mol.html" >ml</a>
+            <a href="index-mol.html" >md</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Инструкция</p></a
