--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -95,7 +95,7 @@
     <div class="block-1">
         <div class="block-1_main-text">
             <h4>Давайте знайомитися!</h4>
-            <p>Я <b>Соломія Вікторівна</b> і я активна жінка в самому розквіті сил.<br>
+            <p>Я <b><sup>*</sup>Соломія Вікторівна</b> і я активна жінка в самому розквіті сил.<br>
                 У мене двоє дорослих дітей та я вже тричі бабуся.
                 Ніколи не втрачаю оптимізм та активність.
             </p>
@@ -129,7 +129,7 @@
                 <div class="story-text">
                     <div class="yellow-text">
                         <p>Коли ми тільки-но вийшли до машини, я зловила на собі погляд дочки, яка влаштувала мені справжнісінький допит. </p>
-                        <p><b>Анжела:</b> Мамо, це схоже на цистит, який у мене був кілька років тому. Може, скасуємо нашу подорож? Чи давай придбаємо Солідагорен, він <b>ефективний</b>, мені допоміг, застосовується при гострих та хронічних інфекціях сечовивідних шляхів.</p>
+                        <p><b><sup>*</sup>Анжела:</b> Мамо, це схоже на цистит, який у мене був кілька років тому. Може, скасуємо нашу подорож? Чи давай придбаємо Солідагорен, він <b>ефективний</b>, мені допоміг, застосовується при гострих та хронічних інфекціях сечовивідних шляхів.</p>
                         <p><b>Соломія В.:</b> В жодному разі не можна відміняти подорож, ми так довго про це мріяли. А про препарат Солідагорен ще подумаю, ти ж знаєш, як я люблю все детально повивчати, зважити. Годі розмов, на нас чекають пригоди!</p>
                     </div>
                     <div class="story-text_subtext">
@@ -236,9 +236,9 @@
         <div class="story-container story-container-light">
             <div class="story-text">
                 <div class="yellow-text">
-                    <p><b>Онука:</b> Бабуся, побігли разом плескатися у басейні! Я так рада, що ти знову така весела і можеш зі мною гратися.</p>
+                    <p><b><sup>*</sup>Онука:</b> Бабуся, побігли разом плескатися у басейні! Я так рада, що ти знову така весела і можеш зі мною гратися.</p>
                     <p><b>Соломія В.:</b> Так, моя радість, вже біжу до тебе. Почекай, я тебе ще сфотографую. </p>
-                    <p>Як добре знову радіти життю та проводити час з моєю маленькою бешкетницею. У найближчій аптеці по дорозі ми придбали Солідагорен. До речі, він <b>зовсім не гіркий</b>, на відміну від інших крапель. А ще мені сподобалось, що <b>не потрібно ковтати таблетки.</b></p>
+                    <p>Як добре знову радіти життю та проводити час з моєю маленькою бешкетницею. Після консультації зі своїм лікарем, у найближчій аптеці по дорозі придбали Солідагорен. До речі, але він <b>зовсім не гіркий</b>, на відміну від інших крапель. А ще мені сподобалось, що <b>не потрібно ковтати таблетки.</b></p>
                 </div>
                 <div class="story-text_subtext">
                     <h5><b>Як приймати</b><br>
@@ -278,10 +278,10 @@
                     <p><b>Соломія В.:</b>  Колю, а що ти п’єш? Мій Солідагорен? Навіщо?
                     </p>
                     <p>
-                        <b>Зять:</b> Зацікавило, що приймає моя люба теща. Почитав інструкцію і вирішив профілактувати утворення каменів у сечовому міхурі. Ви пам’ятаєте, я Вам розповідав, як мені їх в армії ще видаляли. І так, Соломія Вікторівна, не потрібно мені зараз говорити про те, як люблять чоловіки лікуватися і як ми себе любимо.
+                        <b><sup>*</sup>Зять:</b> Зацікавило, що приймає моя люба теща. Почитав інструкцію і вирішив профілактувати утворення каменів у сечовому міхурі. Ви пам’ятаєте, я Вам розповідав, як мені їх в армії ще видаляли. І так, Соломія Вікторівна, не потрібно мені зараз говорити про те, як люблять чоловіки лікуватися і як ми себе любимо.
                     </p>
                     <p>
-                        <b>Соломія В.:</b> Ну добре-добре, для тебе нічого не шкода. Ти у нас молодець, скільки років дієти своєї дотримуєшся.
+                        <b>Соломія В.:</b> Ну добре-добре, для тебе нічого не шкода, тільки проконсультуйся з лікарем. Ти у нас молодець, скільки років дієти своєї дотримуєшся.
                     </p>
 
                 </div>
@@ -382,7 +382,7 @@
     <div class="yellow-text yellow-text-ps">
         <p class="ps-yellow_title">P.S.</p>
         <p><b>Соломія В.:</b> Словами не передати, який же нам відпочинок гарний подарував зять.</p>
-        <p>Ох, зараз це смішно згадувати, як ми з малою бігали навипередки до туалету. Вона від переїдання кавуна, а я від циститу. І добре, що я дослухалася до порад доньки і почала приймати Солідагорен, а то б провела весь час у номері. <b>Солідагорен можна знайти тільки в аптеках.</b></p>
+        <p>Ох, зараз це смішно згадувати, як ми з малою бігали навипередки до туалету. Вона переїдання кавуна, а я від циститу. І добре, що я дослухалася до порад доньки, вчасно проконсультувалась з лікарем і почала приймати Солідагорен, а то б провела весь час у номері. <b>Солідагорен можна знайти тільки в аптеках.</b></p>
         <p>У мене, до речі, його теж вже немає, зять відібрав.</p>
     </div>
     <div class="woman-ps_img"></div>
@@ -408,6 +408,7 @@
             <p>
                 2. ДОСЛІДЖЕННЯ ФЕНОЛЬНИХ СПОЛУК ПЕРСТАЧУ ГУСЯЧОГО Абдулкафарова Е.Р., Ковальова А.М., Седова* А.Б. Національний фармацевтичний університет, Пермська фармацевтична академія.
             </p>
+            <p>* Аватари сайту. Всі персонажі і події вигадані, а збіг з реальним життям випадковий.</p>
         </div>
     </div>
     <div class="disclamer-tra__inner">
