--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -96,7 +96,7 @@
     <div class="block-1">
         <div class="block-1_main-text">
             <h4>Давайте знакомиться!</h4>
-            <p>Я <b><sup>*</sup>Соломия Викторовна</b> и я активная женщина в самом расцвете сил.<br>
+            <p>Я <b>Соломия Викторовна<sup>*</sup></b> и я активная женщина в самом расцвете сил.<br>
                 У меня двое взрослых детей и я уже трижды бабушка. 
             </p>
             <p>
@@ -128,7 +128,7 @@
                 <div class="story-text">
                     <div class="yellow-text">
                         <p>Когда мы только вышли к машине, я поймала на себе взгляд дочери, которая устроила мне настоящий допрос. </p>
-                        <p><b><sup>*</sup>Анжела:</b> Мама, это похоже на цистит, у меня был несколько лет назад. Может, отменим наше путешествие? Или давай купим Солидагорен в аптеке, <b>он эффективен</b>, мне помог, применяется при острых и хронических инфекциях мочевыводящих путей.</p>
+                        <p><b>Анжела<sup>*</sup>:</b> Мама, это похоже на цистит, у меня был несколько лет назад. Может, отменим наше путешествие? Или давай купим Солидагорен в аптеке, <b>он эффективен</b>, мне помог, применяется при острых и хронических инфекциях мочевыводящих путей.</p>
                         <p><b>Соломия В:</b> Ни в коем случае нельзя отменять путешествие, мы так долго об этом мечтали. А о препарате Солидагорен еще подумаю, ты же знаешь, как я люблю все подробно поизучать, взвесить. Хватит разговоров, нас ждут приключения!</p>
                     </div>
                     <div class="story-text_subtext">
@@ -232,7 +232,7 @@
         <div class="story-container story-container-light">
             <div class="story-text">
                 <div class="yellow-text">
-                    <p><b><sup>*</sup>Внучка:</b> Бабушка, побежали вместе плескаться в бассейне! Посмотри? как я умею. Я так рада, что ты опять такая веселая и можешь со мной играть.</p>
+                    <p><b>Внучка<sup>*</sup>:</b> Бабушка, побежали вместе плескаться в бассейне! Посмотри? как я умею. Я так рада, что ты опять такая веселая и можешь со мной играть.</p>
                     <p><b>Соломия В.:</b> Да, моя радость, уже бегу к тебе. Подожди, я тебя еще сфотографирую. </p>
                     <p>Как хорошо снова радоваться жизни и проводить время с моей маленькой озорницей. После консультации с врачом, ближайшей аптеке по дороге приобрели Солидагорен. Кстати, он <b>совсем не горький</b>, в отличие от других капель. А еще мне понравилось, что <b>не нужно глотать таблетки </b></p>
                 </div>
@@ -273,7 +273,7 @@
                     <p><b>Соломия В.:</b>  Коля, а ты пьешь? Мой Солидагорен? Зачем? 
                     </p>
                     <p>
-                        <b><sup>*</sup>Зять:</b> Заинтересовало, что принимает дорогая теща. Почитал инструкцию и решил заняться профилактикой образования камней в мочевом пузыре. Вы помните, я Вам рассказывал, как мне их в армии еще удаляли. Итак, Соломия Викторовна, не нужно мне сейчас говорить о том, как любят мужчины лечиться и как мы себя любим.
+                        <b>Зять<sup>*</sup>:</b> Заинтересовало, что принимает дорогая теща. Почитал инструкцию и решил заняться профилактикой образования камней в мочевом пузыре. Вы помните, я Вам рассказывал, как мне их в армии еще удаляли. Итак, Соломия Викторовна, не нужно мне сейчас говорить о том, как любят мужчины лечиться и как мы себя любим.
                     </p>
                     <p>
                         <b>Соломия В.:</b> Ну хорошо-хорошо, для тебя ничего не жалко, только проконсультируйся с врачом. Ты у нас молодец, сколько лет диеты своей придерживаешься.
@@ -401,7 +401,7 @@
                 1 УДК 616.62002.2085.322  Фитотерапия хронического рецидивирующего бактериального цистита О.Д. Никитин Национальный медицинский университет имени А.А. Богомольца, г. Киев СЕМЕЙНАЯ МЕДИЦИНА №3 (59), 2015 15 ISSN 2307 5112  
             </p>
             <p>
-                ² Исследование фенольных соединений лапчатки гусиной Абдулкафарова Э.Р., Ковалева А.М., Седова А.Б. Национальный фармацевтический университет, Пермская фармацевтическая академия. 
+                2 Исследование фенольных соединений лапчатки гусиной Абдулкафарова Э.Р., Ковалева А.М., Седова А.Б. Национальный фармацевтический университет, Пермская фармацевтическая академия. 
             </p>
             <p>*Аватары сайта. Все персонажи и события вымышлены, а совпадения с реальной жизнью случайны.</p>
         </div>
