--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -77,7 +77,7 @@
 
     <div class="header-custom header-custom_ru">
             <div class="header-title">
-                <p>А как выглядит твой<br> гастрит?</p>
+                <p class="header-title-ru">А как выглядит твой гастрит?</p>
                 <div class="header-title_product"></div>
                 <p class="header-title_subtext"><b>Гастритол</b> - не носи<br>с собой гастрит</p>
             </div>
