--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -84,21 +84,20 @@
             Mažina simptominių vaistų poreikį (karščiavimą mažinančių, nosies lašų, ​​vaistų nuo kosulio).²
           </p>
           <p>
-            Skatina greitą pasveikimą.¹
+            Skatina greitesnį pasveikimą ¹
           </p>
           <p>
             Rekomenduojama pradėti vartoti vos pajutus pirmuosius peršalimo simptomus.
           </p>
-          <p>Padeda atsistatyti po peršalimo.¹</p>
         </div>
       </div>
       <a name="block-2"></a>
       <div class="block-2">
         <h2>KAIP VEIKIA INFLUCID</h2>
         <div class="block-2__container">
-          <div class="block-2__image">
+          <div class="block-2__image">  
             <b>
-              Stiprina natūralią organizmo<br>apsaugą  ir <br>skatina greitą pasveikimą¹
+              Stiprina natūralią organizmo<br>apsaugą  ir <br>skatina greitesnį pasveikimą ¹
             </b>
           </div>
           <div class="block-2__text">
@@ -390,7 +389,7 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Vaikų peršalimo gydymas</p></div>
               <div class="block-6__container-text"><p>
-                Deja, neįmanoma visiškai apsaugoti vaiko nuo peršalimo ligų. Ypač kai kiekvieną dieną jūsų vaiką supa bendraamžiai. Pakanka, kad vienas vaikas darželyje ar mokykloje susirgtų ir infekcija greitai plinta toliau. Susirgus vaiku labai dažnai vienam iš tėvų tenka naudotis nedarbingumu. Ir čia kyla klausimų: “Kaip greitai išgyti peršalimą? Koks yra geriausias vaistas nuo peršalimo? Ar galima greitai pasveikti nuo peršalimo? Ką daryti, kad vaikui peršalimas pasitaikytų kuo rečiau ir praeitų lengviau?</p>
+                Deja, neįmanoma visiškai apsaugoti vaiko nuo peršalimo ligų. Ypač kai kiekvieną dieną jūsų vaiką supa bendraamžiai. Pakanka, kad vienas vaikas darželyje ar mokykloje susirgtų ir infekcija greitai plinta toliau. Susirgus vaikui labai dažnai vienam iš tėvų tenka naudotis nedarbingumu. Ir čia kyla klausimų: “Kaip greitai išgyti peršalimą? Koks yra geriausias vaistas nuo peršalimo? Ar galima greitai pasveikti nuo peršalimo? Ką daryti, kad vaikui peršalimas pasitaikytų kuo rečiau ir praeitų lengviau?</p>
               </div>
               <button class="accordion">detailed</button>
               <div class="panel">
@@ -448,7 +447,7 @@
 <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
 <!--            </ol>-->
             <p>
-              Prašome įdėmiai perskaityti pakuotės lapelį ir vaistą vartoti, kaip nurodyta. Netinkamai vartojamas vaistas gali pakenkti Jūsų sveikatai. Jei simptomai nepraeina ar atsirado šalutinis poveikis, dėl tolesnio vaisto vartojimo būtina pasitarti su gydytoju ar vaistininku. Jeigu įtariate, kad Jums pasireiškė šalutinis poveikis, apie jį praneškite savo gydytojui, vaistininkui ar Valstybinei vaistų kontrolės tarnybai prie Lietuvos Respublikos sveikatos apsaugos ministerijos el. paštu <a>NepageidaujamaR@vvkt.lt</a> arba kitais būdais, kaip nurodyta jos interneto svetainėje <a>www.vvkt.lt</a> . Influcid pakuotės lapelis
+              Prašome įdėmiai perskaityti pakuotės lapelį ir vaistą vartoti, kaip nurodyta. Netinkamai vartojamas vaistas gali pakenkti Jūsų sveikatai. Jei simptomai nepraeina ar atsirado šalutinis poveikis, dėl tolesnio vaisto vartojimo būtina pasitarti su gydytoju ar vaistininku. Jeigu įtariate, kad Jums pasireiškė šalutinis poveikis, apie jį praneškite savo gydytojui, vaistininkui ar Valstybinei vaistų kontrolės tarnybai prie Lietuvos Respublikos sveikatos apsaugos ministerijos el. paštu <a>NepageidaujamaR@vvkt.lt</a> arba kitais būdais, kaip nurodyta jos interneto svetainėje <a>www.vvkt.lt</a> .
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>manufacturer:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
@@ -456,7 +455,7 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>SELF-TREATMENT CAN BE DANGEROUS TO YOUR HEALTH</p>
+            <!-- <p>SELF-TREATMENT CAN BE DANGEROUS TO YOUR HEALTH</p> -->
           </div>
 
 
