--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -427,6 +427,10 @@
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Įrodymai</h3>
+                <div class="apt-container">
+                  <a target="_blank" href=""></a>
+                  <a target="_blank" href=""></a>
+                </div>
                 <ol>
                   <li>Influcid pakuotės lapelis</li>
                   <li>Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial</li>
