--- a/Tansilotren-BY/index.html
+++ b/Tansilotren-BY/index.html
@@ -281,7 +281,7 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>При остром тонзиллите (ангине)</b><br>по 1 таблетке 4 раза в сутки до улучшения. Увеличение длительности лечения более 1 недели в указанном режиме или увеличение суточной дозы возможно после консультации с врачом.<br>При улучшении состояния частота приема должна быть снижена.<br>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+            <p><b>При остром тонзиллите (ангине)</b><br>по 1 таблетке 4 раза в сутки до улучшения. Увеличение длительности лечения более 1 недели в указанном режиме или увеличение суточной дозы возможно после консультации с врачом.<br>При улучшении состояния частота приема должна быть снижена.</p>
             <!-- <button class="popup-btn popup2" data-action="open2">Детальнее</button> -->
         </div>
         <div class="plate">
