--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -428,8 +428,8 @@
               <div class="block-7__text">
                 <h3>Įrodymai</h3>
                 <div class="apt-container">
-                  <a target="_blank" href=""></a>
-                  <a target="_blank" href=""></a>
+                  <a target="_blank" href="https://www.gintarine.lt/influcid-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.nvaistine.lt/influcid-tabletes-n40"></a>
                 </div>
                 <ol>
                   <li>Influcid pakuotės lapelis</li>
