--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -288,11 +288,11 @@
                 </div>
 
                 <div class="diet-container">
-                    <p class="diet-subtitle">Лікувальна дієта</p>
-                    <p class="diet-title">при сечокам'яній хворобі</p>
+                    <p class="diet-subtitle">Лечебная диета</p>
+                    <p class="diet-title">при мочекаменной болезни</p>
                     <div class="diet-btn-container">
                         <div class="diet-acc">
-                            <button class="accordion diet_btn">прочитати дієту</button>
+                            <button class="accordion diet_btn">прочитать диету</button>
                             <div class="panel">
                                 <p>
                                     Общие рекомендации при мочекаменной болезни 
@@ -323,42 +323,42 @@
                                 </p>
                             </div>
                         </div>
-                        <a class=" diet_btn">завантажити дієту</a>
+                        <a class=" diet_btn">загрузить диету</a>
                     </div>
                 </div>
                 <div class="diet-container">
-                    <p class="diet-subtitle">Лікувальна дієта</p>
-                    <p class="diet-title">при захворюваннях нирок</p>
+                    <p class="diet-subtitle">Лечебная диета</p>
+                    <p class="diet-title">при заболеваниях почек</p>
                     <div class="diet-btn-container">
                         <div class="diet-acc">
-                            <button class="accordion diet_btn">прочитати дієту</button>
+                            <button class="accordion diet_btn">прочитать диету</button>
                             <div class="panel">
                                 <p>
-                                    ХАРЧУВАННЯ ПРИ ЗАХВОРЮВАННЯХ НИРОК 
+                                    ПИТАНИЕ ПРИ ЗАБОЛЕВАНИЯХ ПОЧЕК 
 
-Споживання рідини зменшити до 1 л 
+Потребление жидкости уменьшить до 1 л в сутки 
 
-Обмежити вміст білків у їжі.  
+Ограничить содержание белков в пище. 
 
-Готувати без солі.  
+Готовить без соли. 
 
-Харчування дробне: 4-5 разів на добу.  
+Питание дробное: 4-5 приемов пищи в день. 
 
-Їжу вживати звичайної кімнатної температури.  
+Пищу принимать обычной комнатной температуры. 
 
-М'ясо і рибу обов'язково відварювати, добова порція не більше 100-150 г.  
+Мясо и рыбу обязательно отваривать, суточная порция не более 100-150 г. 
 
-Калорійність дієти - 2700-2900 ккал. на добу 
+Калорийность диеты - 2700-2900 ккал. в сутки 
 
  
 
-Для Вашої зручності ознайомтесь з повним списком продуктів, завантаживши дієту. 
+Для Вашего удобства ознакомьтесь с полным списком продуктов, загрузив диету. 
 
  
                                 </p>
                             </div>
                         </div>
-                        <a class="diet_btn">завантажити дієту</a>
+                        <a class="diet_btn">загрузить диету</a>
                     </div>
                     <div class=test4end></div>
                 </div>
