--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -295,7 +295,7 @@
                             <button class="accordion diet_btn">прочитать диету</button>
                             <div class="panel">
                                 <p>
-                                    Общие рекомендации при мочекаменной болезни 
+                                    <b>Общие рекомендации при мочекаменной болезни</b> <br>
 
 Питьевой режим - примерно 3 л воды в сутки. 
 
@@ -334,7 +334,7 @@
                             <button class="accordion diet_btn">прочитать диету</button>
                             <div class="panel">
                                 <p>
-                                    ПИТАНИЕ ПРИ ЗАБОЛЕВАНИЯХ ПОЧЕК 
+                                    <b>ПИТАНИЕ ПРИ ЗАБОЛЕВАНИЯХ ПОЧЕК</b> <br>
 
 Потребление жидкости уменьшить до 1 л в сутки 
 
