--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -323,7 +323,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class=" diet_btn">загрузить диету</a>
+                        <a class="diet_btn" target="_blank" href="./Dieta_01_ru.pdf">загрузить диету</a>
                     </div>
                 </div>
                 <div class="diet-container">
@@ -358,7 +358,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="diet_btn">загрузить диету</a>
+                        <a class="diet_btn" target="_blank" href="./Dieta_02_ru.pdf">загрузить диету</a>
                     </div>
                     <div class=test4end></div>
                 </div>
