--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -300,7 +300,7 @@
                             <button class="accordion diet_btn">прочитати дієту</button>
                             <div class="panel">
                                 <p>
-                                    ЗАГАЛЬНІ РЕКОМЕНДАЦІЇ ПРИ СЕЧОКАМ'ЯНІЙ ХВОРОБІ 
+                                    <b>ЗАГАЛЬНІ РЕКОМЕНДАЦІЇ ПРИ СЕЧОКАМ'ЯНІЙ ХВОРОБІ </b><br>
 
 Питний режим - приблизно 3 л води на добу. 
 
@@ -328,7 +328,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class=" diet_btn">завантажити дієту</a>
+                        <a class="diet_btn" target="_blank" href="./Dieta_01_ua.pdf">завантажити дієту</a>
                     </div>
                 </div>
                 <div class="diet-container">
@@ -339,7 +339,7 @@
                             <button class="accordion diet_btn">прочитати дієту</button>
                             <div class="panel">
                                 <p>
-                                    ХАРЧУВАННЯ ПРИ ЗАХВОРЮВАННЯХ НИРОК 
+                                    <b>ХАРЧУВАННЯ ПРИ ЗАХВОРЮВАННЯХ НИРОК </b><br>
 
 Споживання рідини зменшити до 1 л 
 
@@ -363,7 +363,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="diet_btn">завантажити дієту</a>
+                        <a class="diet_btn" target="_blank" href="./Dieta_02_ua.pdf">завантажити дієту</a>
                     </div>
                     <div class=test4end></div>
                 </div>
