--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -569,6 +569,16 @@
 
 <!--        <div id="comp_wgt" class="map2" data-drug="5835" data-lang="ru" data-url="https://compendium.com.ua/info/3025/tonzilotren/" data-proj="tonsilotren" style="z-index: 5; border-color: #A00067; width: 100%;"><div class="title" style="background: #A00067;"><a href="https://compendium.com.ua/info/3025/tonzilotren/" title="ТОНЗИЛОТРЕН, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>-->
         <div class="map-text">
+            <div class="apt-container">
+                <a target="_blank" href="https://farmaciafamiliei.md/product/30276"></a>
+                <a target="_blank" href="http://medicamente.md/ru/product/23121"></a>
+                <a target="_blank" href="https://felicia.md/ro/5822633/"></a>
+              
+                <a target="_blank" href="https://www.apteka.md/ro/Alte-categorii-de-medicamente/Medicamente-homeopate/Tonsilotren-comp-N20x3-p53922c91c116.html"></a>
+                <a target="_blank" href="https://farmacie.md/ro/5981492/"></a>
+                <a target="_blank" href="https://www.farmacieonline.md/medicamente/tonsilotren-n20x3.html"></a>
+                <a target="_blank" href="https://farmacie-online.md/ru/23877-friendly-url-autogeneration-failed.html"></a>
+              </div>
             <h3>Baza de date </h3>
             <ol>
                 <li>Friese K.H., Zabalotnyi D.I. [Гомеопатическое лечение тонзиллита нестрептококковой этиологии у детей...]. Der Kassenarzt 2006; 6: 40-42.</li>
